--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,6 @@ target_compile_options(psrpomiprov PRIVATE -fvisibility=hidden -fno-strict-alias
 
 add_custom_command(TARGET psrpomiprov POST_BUILD
 	COMMAND ${OMI}/output/bin/omireg $<TARGET_FILE:psrpomiprov> -n interop)
+
+add_custom_target(gen DEPENDS schema.mof
+	COMMAND ${OMI}/output/bin/omigen -C ${OMI}/share/networkschema/CIM_Schema.mof schema.mof Shell -e Stream -e CommandState -e EnvironmentVariable)
