--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ target_include_directories(psrpomiprov PRIVATE ${OMI}/output/include ${OMI} ${OM
 target_compile_options(psrpomiprov PRIVATE -fvisibility=hidden -fno-strict-aliasing)
 
 add_custom_command(TARGET psrpomiprov POST_BUILD
-	COMMAND ${OMI}/output/bin/omireg $<TARGET_FILE:psrpomiprov> -n interop)
+	COMMAND ${OMI}/output/bin/omireg $<TARGET_FILE:psrpomiprov> -n interop --hosting @requestor-shell@)
 
 add_custom_target(gen DEPENDS schema.mof
 	COMMAND ${OMI}/output/bin/omigen -C ${OMI}/share/networkschema/CIM_Schema.mof schema.mof Shell -e Stream -e CommandState -e EnvironmentVariable)
