wip - client changes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,17 +24,11 @@ add_library(psrpomiprov SHARED
 	schema.c
 	xpress.c
 	BufferManipulation.c
+	Client.c
 	coreclrutil.cpp)
 
 target_link_libraries(psrpomiprov
-	miapi
-	omi_error
-	wsman
-	xmlserializer
-	protocol
-	sock
-	provmgr
-	wql
+	mi
 	base
 	pal
 	${CMAKE_THREAD_LIBS_INIT}
