validate shared libraries includes all necessary static libraries

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,6 +63,12 @@ target_include_directories(psrpclient PRIVATE ${OMI}/output/include ${OMI} ${OMI
 set_target_properties(psrpclient PROPERTIES COMPILE_FLAGS
 	"-fvisibility=hidden -fno-strict-aliasing")
 
+add_custom_command(TARGET psrpclient POST_BUILD
+	COMMAND ${OMI}/output/bin/chkshlib $<TARGET_FILE:psrpclient>)
+
+add_custom_command(TARGET psrpomiprov POST_BUILD
+	COMMAND ${OMI}/output/bin/chkshlib $<TARGET_FILE:psrpomiprov>)
+
 add_custom_command(TARGET psrpomiprov POST_BUILD
 	COMMAND ${OMI}/output/bin/omireg $<TARGET_FILE:psrpomiprov> -n interop --hosting @requestor-shell@)
 
