Change version number

--- a/installbuilder/GNUmakefile
+++ b/installbuilder/GNUmakefile
@@ -9,7 +9,10 @@ endif
 
 DATAFILES = Psrp.data
 
-OUTPUTFILE_LINE = --OUTPUTFILE=psrp-$(CONFIG_VERSION)-$(CONFIG_PATCH_LEVEL).universal.$(PF_ARCH)
+PSRP_VERSION = 0.1.0
+PSRP_PATCH_LEVEL = 0
+
+OUTPUTFILE_LINE = --OUTPUTFILE=psrp-$(PSRP_VERSION)-$(PSRP_PATCH_LEVEL).universal.$(PF_ARCH)
 
 all:
 ifneq ($(PF),Linux)
@@ -26,8 +29,8 @@ ifneq ($(PF),Linux)
 		--PFMINOR=$(PF_MINOR) \
 		--PFARCH=$(PF_ARCH) \
 		--PFDISTRO=$(PF_DISTRO) \
-		--VERSION=$(CONFIG_VERSION) \
-		--RELEASE=$(CONFIG_PATCH_LEVEL) \
+		--VERSION=$(PSRP_VERSION) \
+		--RELEASE=$(PSRP_PATCH_LEVEL) \
 		$(OUTPUTFILE_LINE) \
 		--DATAFILE_PATH=datafiles \
 		$(DATAFILES)
@@ -46,8 +49,8 @@ else
 		--PFMINOR=$(PF_MINOR) \
 		--PFARCH=$(PF_ARCH) \
 		--PFDISTRO=$(PF_DISTRO) \
-		--VERSION=$(CONFIG_VERSION) \
-		--RELEASE=$(CONFIG_PATCH_LEVEL) \
+		--VERSION=$(PSRP_VERSION) \
+		--RELEASE=$(PSRP_PATCH_LEVEL) \
 		$(OUTPUTFILE_LINE) \
 		--DATAFILE_PATH=datafiles \
 		$(DATAFILES) \
@@ -67,8 +70,8 @@ else
 		--PFMINOR=$(PF_MINOR) \
 		--PFARCH=$(PF_ARCH) \
 		--PFDISTRO=$(PF_DISTRO) \
-		--VERSION=$(CONFIG_VERSION) \
-		--RELEASE=$(CONFIG_PATCH_LEVEL) \
+		--VERSION=$(PSRP_VERSION) \
+		--RELEASE=$(PSRP_PATCH_LEVEL) \
 		$(OUTPUTFILE_LINE) \
 		--DATAFILE_PATH=datafiles \
 		$(DATAFILES) \
