--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -fPIC")
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	add_definitions(-Dmacos)
 	set(CMAKE_ICONV iconv)
+	set(OUR_LD_PATH export DYLD_LIBRARY_PATH)
+else ()
+	set(OUR_LD_PATH export LD_LIBRARY_PATH)
 endif ()
 
 set(OMI ../omi/Unix)
@@ -70,13 +73,14 @@ set_target_properties(psrpclient PROPERTIES COMPILE_FLAGS
 	"-fvisibility=hidden -fno-strict-aliasing")
 
 add_custom_command(TARGET psrpclient POST_BUILD
-	COMMAND ${OMI}/output/bin/chkshlib $<TARGET_FILE:psrpclient>)
+	COMMAND ${OUR_LD_PATH}=${OMI}/output/lib && ${OMI}/output/bin/chkshlib $<TARGET_FILE:psrpclient>)
 
 add_custom_command(TARGET psrpomiprov POST_BUILD
-	COMMAND ${OMI}/output/bin/chkshlib $<TARGET_FILE:psrpomiprov>)
+	COMMAND  ${OUR_LD_PATH}=${OMI}/output/lib && ${OMI}/output/bin/chkshlib $<TARGET_FILE:psrpomiprov>)
 
-add_custom_command(TARGET psrpomiprov POST_BUILD
-	COMMAND ${OMI}/output/bin/omireg $<TARGET_FILE:psrpomiprov> -n interop --hosting @requestor-shell@)
+add_custom_target(reg
+	COMMAND  ${OUR_LD_PATH}=${OMI}/output/lib && ${OMI}/output/bin/omireg $<TARGET_FILE:psrpomiprov> -n interop --hosting @requestor-shell@)
 
 add_custom_target(gen DEPENDS schema.mof
-	COMMAND ${OMI}/output/bin/omigen -C ${OMI}/share/networkschema/CIM_Schema.mof schema.mof Shell Command)
+	COMMAND  ${OUR_LD_PATH}=${OMI}/output/lib && ${OMI}/output/bin/omigen -C ${OMI}/share/networkschema/CIM_Schema.mof schema.mof Shell Command)
+
