--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,12 @@
-[submodule "omi"]
-	path = omi
-	url = https://github.com/Microsoft/omi.git
 [submodule "Pester"]
 	path = Pester
 	url = https://github.com/PowerShell/psl-pester
 	branch = develop
+[submodule "omi"]
+	path = omi
+	url = https://github.com/Microsoft/omi.git
+	branch = master
+[submodule "pal"]
+	path = pal
+	url = https://github.com/Microsoft/pal.git
+	branch = master
