Changes for InstallBuilder for PAL submodule

--- a/installbuilder/GNUmakefile
+++ b/installbuilder/GNUmakefile
@@ -1,16 +1,17 @@
-TOP = $(shell cd ../omi/Unix ; pwd)
-include $(TOP)/../../../pal/build/config.mak
-include $(TOP)/config.mak
+TOP = $(shell cd .. ; pwd)
+include $(TOP)/pal/build/config.mak
 
 DISTRO_TYPE = $(PF)
 ifeq ($(PF),Linux)
 DISTRO_TYPE = $(PF)_$(PF_DISTRO)
 endif
 
-DATAFILES = Psrp.data
-
 PSRP_VERSION = 1.0.0
 PSRP_PATCH_LEVEL = 0
+OUTPUTDIR = $(TOP)
+INSTALLBUILDER_SUPPORT_DIR = $(TOP)/omi/Unix/installbuilder/datafiles
+
+DATAFILES = Psrp.data
 
 OUTPUTFILE_LINE = --OUTPUTFILE=psrp-$(PSRP_VERSION)-$(PSRP_PATCH_LEVEL).universal.$(PF_ARCH)
 
@@ -19,7 +20,7 @@ ifneq ($(PF),Linux)
 	@echo "========================= Make PSRP installer $(PF_DISTRO)"
 	sudo rm -rf $(OUTPUTDIR)/intermediate/staging
 	mkdir -p $(OUTPUTDIR)/release $(OUTPUTDIR)/intermediate
-	python $(TOP)/../../../pal/installer/InstallBuilder/installbuilder.py \
+	python $(TOP)/pal/installer/InstallBuilder/installbuilder.py \
 		--BASE_DIR=$(OUTPUTDIR) \
 		--TARGET_DIR=$(OUTPUTDIR)/release \
 		--INTERMEDIATE_DIR=$(OUTPUTDIR)/intermediate \
@@ -39,7 +40,7 @@ else
 	@echo "========================= Make PSRP installer RPM"
 	sudo rm -rf $(OUTPUTDIR)/intermediate/staging
 	mkdir -p $(OUTPUTDIR)/release $(OUTPUTDIR)/intermediate
-	python $(TOP)/../../../pal/installer/InstallBuilder/installbuilder.py \
+	python $(TOP)/pal/installer/InstallBuilder/installbuilder.py \
 		--BASE_DIR=$(OUTPUTDIR) \
 		--TARGET_DIR=$(OUTPUTDIR)/release \
 		--INTERMEDIATE_DIR=$(OUTPUTDIR)/intermediate \
@@ -54,13 +55,13 @@ else
 		$(OUTPUTFILE_LINE) \
 		--DATAFILE_PATH=datafiles \
 		$(DATAFILES) \
-		$(TOP)/installbuilder/datafiles/Linux_RPM.data
+		$(INSTALLBUILDER_SUPPORT_DIR)/Linux_RPM.data
  endif
  ifeq ($(BUILD_DPKG),1)
 	echo "========================= Make PSRP installer DPKG"
 	sudo rm -rf $(OUTPUTDIR)/intermediate/staging
 	mkdir -p $(OUTPUTDIR)/release $(OUTPUTDIR)/intermediate
-	python $(TOP)/../../../pal/installer/InstallBuilder/installbuilder.py \
+	python $(TOP)/pal/installer/InstallBuilder/installbuilder.py \
 		--BASE_DIR=$(OUTPUTDIR) \
 		--TARGET_DIR=$(OUTPUTDIR)/release \
 		--INTERMEDIATE_DIR=$(OUTPUTDIR)/intermediate \
@@ -75,7 +76,7 @@ else
 		$(OUTPUTFILE_LINE) \
 		--DATAFILE_PATH=datafiles \
 		$(DATAFILES) \
-		$(TOP)/installbuilder/datafiles/Linux_DPKG.data
+		$(INSTALLBUILDER_SUPPORT_DIR)/Linux_DPKG.data
  endif
 endif
 clean:
