Add new GNU makefile for top-level builds, revise output directories

--- a/installbuilder/GNUmakefile
+++ b/installbuilder/GNUmakefile
@@ -8,7 +8,9 @@ endif
 
 PSRP_VERSION = 1.0.0
 PSRP_PATCH_LEVEL = 0
-OUTPUTDIR = $(TOP)
+
+INTERMEDIATE_DIR = $(TOP)/intermediate
+TARGET_DIR  = $(TOP)/target/$(BUILD_CONFIGURATION)
 INSTALLBUILDER_SUPPORT_DIR = $(TOP)/omi/Unix/installbuilder/datafiles
 
 DATAFILES = Psrp.data
@@ -16,35 +18,17 @@ DATAFILES = Psrp.data
 OUTPUTFILE_LINE = --OUTPUTFILE=psrp-$(PSRP_VERSION)-$(PSRP_PATCH_LEVEL).universal.$(PF_ARCH)
 
 all:
-ifneq ($(PF),Linux)
-	@echo "========================= Make PSRP installer $(PF_DISTRO)"
-	sudo rm -rf $(OUTPUTDIR)/intermediate/staging
-	mkdir -p $(OUTPUTDIR)/release $(OUTPUTDIR)/intermediate
-	python $(TOP)/pal/installer/InstallBuilder/installbuilder.py \
-		--BASE_DIR=$(OUTPUTDIR) \
-		--TARGET_DIR=$(OUTPUTDIR)/release \
-		--INTERMEDIATE_DIR=$(OUTPUTDIR)/intermediate \
-		--STAGING_DIR=$(OUTPUTDIR)/intermediate/staging \
-		--PF=$(PF) \
-		--PFMAJOR=$(PF_MAJOR) \
-		--PFMINOR=$(PF_MINOR) \
-		--PFARCH=$(PF_ARCH) \
-		--PFDISTRO=$(PF_DISTRO) \
-		--VERSION=$(PSRP_VERSION) \
-		--RELEASE=$(PSRP_PATCH_LEVEL) \
-		$(OUTPUTFILE_LINE) \
-		--DATAFILE_PATH=datafiles \
-		$(DATAFILES)
-else
- ifeq ($(BUILD_RPM),1)
+	sudo rm -rf $(TOP)/target $(TOP)/intermediate
+	mkdir -p $(TARGET_DIR) $(INTERMEDIATE_DIR)
+
+ifeq ($(BUILD_RPM),1)
 	@echo "========================= Make PSRP installer RPM"
-	sudo rm -rf $(OUTPUTDIR)/intermediate/staging
-	mkdir -p $(OUTPUTDIR)/release $(OUTPUTDIR)/intermediate
+	sudo rm -rf $(INTERMEDIATE_DIR)/staging
 	python $(TOP)/pal/installer/InstallBuilder/installbuilder.py \
-		--BASE_DIR=$(OUTPUTDIR) \
-		--TARGET_DIR=$(OUTPUTDIR)/release \
-		--INTERMEDIATE_DIR=$(OUTPUTDIR)/intermediate \
-		--STAGING_DIR=$(OUTPUTDIR)/intermediate/staging \
+		--BASE_DIR=$(TOP) \
+		--TARGET_DIR=$(TARGET_DIR) \
+		--INTERMEDIATE_DIR=$(INTERMEDIATE_DIR) \
+		--STAGING_DIR=$(INTERMEDIATE_DIR)/staging \
 		--PF=$(PF) \
 		--PFMAJOR=$(PF_MAJOR) \
 		--PFMINOR=$(PF_MINOR) \
@@ -56,16 +40,15 @@ else
 		--DATAFILE_PATH=datafiles \
 		$(DATAFILES) \
 		$(INSTALLBUILDER_SUPPORT_DIR)/Linux_RPM.data
- endif
- ifeq ($(BUILD_DPKG),1)
-	echo "========================= Make PSRP installer DPKG"
-	sudo rm -rf $(OUTPUTDIR)/intermediate/staging
-	mkdir -p $(OUTPUTDIR)/release $(OUTPUTDIR)/intermediate
+endif
+ifeq ($(BUILD_DPKG),1)
+	@echo "========================= Make PSRP installer DPKG"
+	sudo rm -rf $(INTERMEDIATE_DIR)/staging
 	python $(TOP)/pal/installer/InstallBuilder/installbuilder.py \
-		--BASE_DIR=$(OUTPUTDIR) \
-		--TARGET_DIR=$(OUTPUTDIR)/release \
-		--INTERMEDIATE_DIR=$(OUTPUTDIR)/intermediate \
-		--STAGING_DIR=$(OUTPUTDIR)/intermediate/staging \
+		--BASE_DIR=$(TOP) \
+		--TARGET_DIR=$(TARGET_DIR) \
+		--INTERMEDIATE_DIR=$(INTERMEDIATE_DIR) \
+		--STAGING_DIR=$(INTERMEDIATE_DIR)/staging \
 		--PF=$(PF) \
 		--PFMAJOR=$(PF_MAJOR) \
 		--PFMINOR=$(PF_MINOR) \
@@ -77,9 +60,12 @@ else
 		--DATAFILE_PATH=datafiles \
 		$(DATAFILES) \
 		$(INSTALLBUILDER_SUPPORT_DIR)/Linux_DPKG.data
- endif
 endif
-clean:
+	rm -rf $(TARGET_DIR)/package_filename
 
-#	sudo rm -rf $(OUTPUTDIR)/intermediate
-#	sudo rm -rf $(OUTPUTDIR)/release
+	# Pick up the PSRP client library for distribution
+	cp $(TOP)/src/libpsrpclient.* $(TARGET_DIR)
+
+
+clean:
+	sudo rm -rf $(TOP)/release $(TOP)/intermediate
