--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,7 @@ addons:
       - libpam0g-dev
       - libssl-dev
       - libcurl4-openssl-dev
+      - rpm
+      - librpm-dev
 
-script: ./build.sh
+script: make release
