Add build number as the package patch numbers

--- a/installbuilder/GNUmakefile
+++ b/installbuilder/GNUmakefile
@@ -7,7 +7,7 @@ DISTRO_TYPE = $(PF)_$(PF_DISTRO)
 endif
 
 PSRP_VERSION = 1.0.0
-PSRP_PATCH_LEVEL = $(shell if [ -z "$$BUILD" ]; then echo "0"; else echo $$BUILD; fi)
+PSRP_PATCH_LEVEL = $(shell if [ -z "$$BUILD_NUMBER" ]; then echo "0"; else echo $$BUILD_NUMBER; fi)
 
 INTERMEDIATE_DIR = $(TOP)/intermediate
 TARGET_DIR  = $(TOP)/target/$(BUILD_CONFIGURATION)
